--- a/style.css
+++ b/style.css
@@ -1,1 +1,19 @@
 
+body {
+  max-width: 1024px;
+  margin: 10px;
+  padding: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 20px; 
+}
+
+img {
+    float: right;
+    width: 33%;
+    padding: 15px;
+}
+
+h1 {
+    font-size: 2em;
+}
